# learning_log

./: .gitignore  README.md  db.sqlite3  pyproject.toml
accounts/: urls.py
accounts/templates/registration/: login.html
learning_logs/: admin.py  form.py  models.py  urls.py  views.py
learning_logs/migrations/: 0001_initial.py  0002_entry.py  0003_rename_date_add_entry_date_added.py
learning_logs/templates/learning_logs/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
ll_project/: settings.py  urls.py
